# coupon-core

./: .flake8  .gitignore  .pre-commit-config.yaml  28_12_24_Ireoluwa_Harlow_proposal_edited-20250110T171529Z-001.yaml  README.md  dicount_flyer_ocr.py  docker-compose.yaml  k8s-1-32-1-do-0-fra1-1739010832391-kubeconfig.yaml  manage.py  pyproject.toml
.github/workflows/: build.yml  ci_pipeline.yaml  cleanup.yml  deploy.yml  test.yml
Discount_Extractor/: discount_extractor.py  utlis.py
Scripts/: entry_backend.sh  entryfile_backend.sh  entryfile_celery.sh  init_db.sh  supervisor.conf
authentication/: .flake8  admin.py  apps.py  models.py  routers.py
authentication/migrations/: 0001_initial.py  0001_initial.py 13-12-46-146.py
authentication/v1/: serializers.py  signals.py  urls.py
authentication/v1/test/: test_adminviews.py  test_authenticationutils.py  test_authenticationviews.py  test_signals.py  test_userprofileviews.py
authentication/v1/utils/: redis_client.py  token_manager.py
authentication/v1/views/: admin_views.py  guest_views.py  social_auth_views.py  userprofile_views.py
coupon_core/: asgi.py  urls.py  wsgi.py
coupon_core/celery/: celery.py
coupon_core/custom_middlewares/: authentication_midldleware.py  userlocation_middleware.py
coupon_core/settings/: __init__.py  base.py  dev.py  prod.py  staging.py
coupon_core/utils/: health_check.py  permissions.py  vectordb_client.py
docker/: Dockerfile.backend  Dockerfile.celery  Dockerfile.core  Dockerfile.frontend  Dockerfile.web_scraper
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/env/: .env.development  .env.production
frontend/src/: App.tsx  index.css  main.tsx  styles.css  types.d.ts
geodiscounts/: apps.py  models.py  routers.py
geodiscounts/migrations/: 0001_initial.py  0001_initial.py 13-12-57-124.py
geodiscounts/v1/: serializers.py  urls.py
github/workflows/: build.yml  ci_pipeline.yml  deploy.yml  test.yml
k8s/: Chart.yaml
k8s/backend/: Chart.yaml
k8s/frontend/: Chart.yaml
k8s/values/: development-values.yaml
src/dishpal_agent/: crawl_dishpal_ai_discounts.py  dishpal_ai_expert.py  streamlit_dishpal_ui.py
web_scraper/: main.py  pyproject.toml  requirements.txt
web_scraper/scraper/: config.py  core.py  kafka_producer.py  utils.py
web_scraper/tests/: test_scraper.py
(+121 files in other folders)
